# ElectionStatistic

./: CMakeLists.txt  README.md  controllerwidget.cpp  controllerwidget.h  main.cpp  mainapplication.cpp  mainapplication.h
src/: bootstrap.h  containerwidget.cpp  containerwidget.h  db.cpp  db.h  inlinestyle.h  totalitemwidget.cpp  totalitemwidget.h  totalmahallevotewidgeg.cpp  totalmahallevotewidgeg.h  totalvotewidget.cpp  totalvotewidget.h  widget.cpp  widget.h
